# hkdt_rs

./: Cargo.toml  README.md
examples/: arm_bot_example.rs  arm_bot_serial.rs  arm_bot_server.rs  find_nearest_point.rs  graph_plot.rs  json_parse.rs  kd_tree.rs  omni_control.rs  p2p_icp_test.rs  swerve_control.rs  web_server.rs
src/: arm_bot.rs  common.rs  connection.rs  json.rs  kinematics.rs  launch.rs  lib.rs
src/algorithm/: brute_force.rs  imu_ekf.rs  kd_tree.rs  mod.rs
src/connection/: serial.rs  thread.rs  udp.rs  web.rs
src/control/: pid.rs
src/kinematics/: common.rs  omni.rs  swerve.rs
src/localization/: imu_ekf.rs  mod.rs  p2p_icp.rs
src/visualize/: graph.rs
