[package]
name = "hkdt_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.1.0"
termion = "1.5"
serialport = "4.2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.41"